[gd_scene load_steps=6 format=3 uid="uid://bgj63tpb1tesm"]

[ext_resource type="Script" path="res://assets/scenes/menu_scene.gd" id="1_5k21t"]
[ext_resource type="PackedScene" uid="uid://c1xyjnh5dpdt2" path="res://assets/objects/menu/main_menu.tscn" id="2_elm5u"]
[ext_resource type="PackedScene" uid="uid://d4jfjxf7378j6" path="res://assets/objects/menu/multiplayer_menu.tscn" id="3_xkfv7"]
[ext_resource type="PackedScene" uid="uid://cvvclvjf62j4p" path="res://assets/objects/menu/connection_menu.tscn" id="4_duo2n"]
[ext_resource type="Texture2D" uid="uid://cnxn7meqpnyf1" path="res://assets/textures/menu/logo.png" id="4_ofaut"]

[node name="MenuScene" type="Node2D" node_paths=PackedStringArray("main_menu", "multiplayer_menu", "connection_menu")]
script = ExtResource("1_5k21t")
main_menu = NodePath("MainMenu")
multiplayer_menu = NodePath("MultiplayerMenu")
connection_menu = NodePath("ConnectionMenu")

[node name="MainMenu" parent="." instance=ExtResource("2_elm5u")]

[node name="MultiplayerMenu" parent="." instance=ExtResource("3_xkfv7")]
visible = false

[node name="ConnectionMenu" parent="." instance=ExtResource("4_duo2n")]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(0, -48)
scale = Vector2(3, 3)
texture = ExtResource("4_ofaut")

[connection signal="mulitplayer_selected" from="MainMenu" to="." method="_on_main_menu_mulitplayer_selected"]
[connection signal="singleplayer_selected" from="MainMenu" to="." method="_on_main_menu_singleplayer_selected"]
[connection signal="cancel_selected" from="MultiplayerMenu" to="." method="_on_multiplayer_menu_cancel_selected"]
[connection signal="connect_selected" from="MultiplayerMenu" to="." method="_on_multiplayer_menu_connect_selected"]
[connection signal="cancel_selected" from="ConnectionMenu" to="." method="_on_connection_menu_cancel_selected"]
